Fixing loading indicator wrapping issue, adjusting favicon

--- a/source/scss/_zodiac.scss
+++ b/source/scss/_zodiac.scss
@@ -44,6 +44,7 @@
   left: 0;
   &:before {
     content: 'Loading ' attr(data-loading) '...';
+    white-space: nowrap;
     position: absolute;
     left: 0;
     bottom: -1.75rem;
